[gd_scene load_steps=4 format=3 uid="uid://dd8jiw2spnc1g"]

[ext_resource type="Script" uid="uid://dlnt37ednv2kr" path="res://scenes/UI/main_menu/main_menu.gd" id="1_srwcp"]
[ext_resource type="Theme" uid="uid://dfsl3yxr8bw0" path="res://common/themes/bubbly/bubbly.tres" id="1_w5ok3"]
[ext_resource type="PackedScene" uid="uid://dtuj5xc17mkj7" path="res://scenes/UI/settings_menu/settings_menu.tscn" id="3_v2tt7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w5ok3")
script = ExtResource("1_srwcp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="DeleteSave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Save"

[node name="SettingsMenu" parent="." instance=ExtResource("3_v2tt7")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteSave" to="." method="_on_delete_save_pressed"]
